[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.10.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "langgraph-cli>=0.4.11",
    "mcp[cli]>=1.9.1",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.34.2",
]
